--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LifeScore</string>
+    <string name="back_button_description">戻る</string>
+    <string name="previous_month_button_description">前の月</string>">
+    <string name="next_month_button_description">次の月</string>">
 </resources>
